@@ -1,3 +1,8 @@
+2006-10-14  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-mkdb.in (OutputSGML): Allow the section id to be set from
+	within the source code "SECTION:" comment block. (#349855)
+
 2006-10-13  Damon Chaplin  <damon@gnome.org>
 
 	* style.css: added missing comma from previous fix (#360967).
